# playwright-rust

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GPT5.2-REVIEW.md  IMPROVEMENTS.md  README.md  flake.nix  playwright.config.js  rust-toolchain.toml
.agents/skills/pw-pair-programming/: SKILL.md
.claude/agents/: documentation-maintenance.md  tdd-feature-implementation.md
.github/workflows/: test-debug.yml  test.yml
.imp/tasks/: task-02A.md
crates/cli/: Cargo.toml  SPEC.md
crates/cli-command-macros/: Cargo.toml
crates/cli-command-macros/src/: lib.rs
crates/cli/src/: artifact_collector.rs  cli.rs  context.rs  context_store.rs  error.rs  lib.rs  main.rs  project.rs  readable.rs  relay.rs  runtime.rs  session_broker.rs  session_helpers.rs  styles.rs  target.rs  testing.rs  workspace.rs
crates/cli/tests/: arg_detection.rs  batch_management.rs  click_navigation.rs  context_tracking.rs  e2e.rs  error_messages.rs  har_config.rs  (+4 more)
crates/core/: Cargo.toml
crates/playwright-core/: Cargo.toml  build.rs
crates/pw-cli/: Cargo.toml  SPEC.md
crates/pw-cli/src/: artifact_collector.rs  cli.rs  context.rs  context_store.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  project.rs  readable.rs  relay.rs  session_broker.rs  styles.rs  testing.rs
crates/pw-cli/src/browser/: session.rs
crates/pw-cli/src/commands/: auth.rs  click.rs  console.rs  coords.rs  daemon.rs  elements.rs  eval.rs  fill.rs  html.rs  mod.rs  navigate.rs  read.rs  screenshot.rs  session.rs  tabs.rs  text.rs  wait.rs
crates/pw-cli/src/commands/init/: mod.rs  templates.rs
crates/pw-cli/src/daemon/: mod.rs  protocol.rs  server.rs
crates/pw-cli/tests/: e2e.rs
crates/pw-core/: Cargo.toml  build.rs
crates/pw-core/benches/: browser_operations.rs  page_operations.rs
crates/pw-core/src/: lib.rs
crates/pw-core/src/api/: launch_options.rs
crates/pw-core/src/protocol/: artifact.rs  browser.rs  browser_context.rs  browser_type.rs  dialog.rs  element_handle.rs  frame.rs  mod.rs  page.rs  playwright.rs  request.rs  response.rs  root.rs  route.rs
crates/pw-core/src/server/: channel.rs  channel_owner.rs  connection.rs  driver.rs  fake_transport.rs  mod.rs  object_factory.rs  transport.rs
crates/pw-core/tests/: click_options_test.rs  connection_integration.rs  cookie_test.rs  initialization_integration.rs  screenshot_options_test.rs  stability_error_quality_test.rs  test_server.rs  transport_integration.rs  websocket_transport.rs
crates/runtime/: Cargo.toml  build.rs
docs/: ARCHITECTURE.md  codebase-map.md  continuous-session-context-mode.md  e2e-testing-papercuts.md  pw-init-structure.md  reconnectable-local-sessions.md  refactor-plan.md  roadmap.md
docs/adr/: 0001-protocol-architecture.md
docs/implementation-plans/: phase1-protocol-foundation.md  phase2-browser-api.md  phase3-page-interactions.md  phase4-advanced-features.md  phase5-advanced-testing.md  phase6-production-hardening.md  phase7-real-world-validation.md
docs/issues/: webserver-hang.md
docs/technical/: phase5-slice4-routing-architecture.md
extension/: README.md  init.js  manifest.json  popup.html  popup.js
extension/background/: Cargo.toml
extension/background/src/: lib.rs
nix/: default.nix
nix/bundles/: rust.config.nix
nix/flake/: default.nix
playwright/: .gitignore
playwright/.pw-cli/: contexts.json
playwright/scripts/: common.sh
playwright/tests/: example.spec.js
scripts/: chatgpt.md  chatgpt.nu  higgsfield.nu  pw.nu
(+218 files in other folders)
