[package]
name = "pw-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust bindings for Microsoft Playwright"
keywords = ["playwright", "browser", "automation", "testing", "e2e"]
categories = ["development-tools::testing", "web-programming"]
readme.workspace = true

[lib]
name = "pw"
doctest = false  # Disable doc-tests by default (run with: cargo test --doc)

[dependencies]
base64 = "0.22"
downcast-rs = "2.0"
futures-util = "0.3"
glob = "0.3"
parking_lot = "0.12"
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"

[build-dependencies]
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6.0"

[dev-dependencies]
anyhow.workspace = true
axum = "0.8"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tower = "0.5"
tower-http = "0.6"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
urlencoding = "2.1"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "minwindef"] }

[[bench]]
name = "browser_operations"
harness = false

[[bench]]
name = "page_operations"
harness = false

[[bench]]
name = "guid_operations"
harness = false
